--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <h3>Leave a Review</h3>
                 <form id="review-form">
                     <div class="form-group">
-                        <label for="review-name">Your Name</label>
-                        <input type="text" id="review-name" required>
+                        <label for="customer-name">Your Name</label>
+                        <input type="text" id="customer-name" required>
                     </div>
                     <div class="form-group">
                         <label for="review-rating">Rating (1-5)</label>
